--- a/.vscode/vex_project_settings.json
+++ b/.vscode/vex_project_settings.json
@@ -1,10 +1,10 @@
 {
 	"project": {
-		"name": "attack_shoudong-2023-10-18T09-17-20",
-		"slot": 7,
-		"description": "Empty V5 C++ Project",
+		"name": "VEXcode_Project",
+		"slot": 5,
+		"description": "",
 		"platform": "V5",
-		"creationDate": "Thu, 19 Oct 2023 09:39:25 GMT",
+		"creationDate": "Tue, 21 Nov 2023 10:29:24 GMT",
 		"language": "cpp",
 		"sdkVersion": "V5_20220726_10_00_00",
 		"cpp": {
